<resources>
    <string name="app_name">PLUSTech Print</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="print_state_online">Ready</string>
    <string name="print_state_off">Off</string>
    <string name="print_state_unknown">Unknown</string>
    <string name="print_state_checking">Checking..</string>
    <string name="printing_status">Printing page %s...</string>
    <string name="enter_url">Enter Url</string>
    <string name="Go_Webpage">Go Webpage</string>
    <string name="back_webhome">Back</string>
    <string name="Print_PreView">Print PreView</string>
    <string name="Preview">Preview</string>
    <string name="total_page">Total page</string>
    <string name="bon">4</string>
    <string name="print_all">Print All</string>
    <string name="page_print">Page Print</string>
    <string name="Current_Page">Current Page</string>
    <string name="Number_Copy">Number Copy</string>
    <string name="Scale_Picture">Scale Picture</string>
	<string name="Fit_To_Page">Fit To Page</string>
	<string name="Page_Margins">Page Margins</string>
	<string name="motphantu">1/4</string>
	<string name="Page_Orientation">Page Orientation</string>
	<string name="Portrait">Portrait</string>
	<string name="Page_size">Page size</string>
	<string name="Legal">Legal</string>
	<string  name="Select_Printer">Select Printer</string>
	<string name="Canon_lP2500">Canon lP2500</string>
	<string name="Print">Print</string>
	<string name="Next">Next</string>
	<string name="nulltextview">Input TextView</string>
	<string name="Back"> Back </string>
	<string name="printsetting">Print Setting</string>
	<string name="go_button">Go Button</string>
	<string name="go">Go</string>
	<string name="PlushTechEmail">PlushTech Email</string>
	<string name="SelectAlbum">Select Album</string>
	<string name="SelectPicture">Select Picture</string>
	<string name="SelectPinter">Select Pinter</string>
	<string name="ScanForPrinter">Scan For Printer</string>
	<string name="Manual">Manual</string>
	<string name="FountPrinter">Fount Printer:</string>
	<string name="Discard">Discard</string>
	<string name="PrintPreView">Print PreView</string>
	<string name="cancel">Cancel</string>
	<string name="ListFile">List File</string>
			<string name="settings">File Explorer Preferences</string>
	<string name="eula_popup_title">Welcome to File Explorer</string>
	<string name="eula_popup_text">Thanks you for installing FileExplorer, the free, opern source, fast, ad-free file manager for Android! Please accept terms and conditions mentioned at http://fileexplorer.appositedesigns.net/eula</string>
	<string name="eula_accept">I accept</string>
	<string name="eula_decline">Decline</string>
	<string name="action_rename">Rename</string>
	<string name="action_delete">Delete</string>
	<string name="action_cut">Cut</string>
	<string name="action_copy">Copy</string>
	<string name="action_prop">Properties</string>
	<string name="action_unmount">Unmount</string>
	<string name="action_format">Format</string>
	<string name="action_share">Share</string>
	<string name="action_zip">Zip</string>
	<string name="msg_delete_success">Path successfully deleted</string>
	<string name="msg_delete_fail">Path could not be deleted</string>
	<string name="empty_folder">This folder is empty</string>
	<string name="menu_paste">Paste</string>
	<string name="menu_addfolder">New Folder</string>
	<string name="menu_preferences">Preferences</string>
	<string name="menu_refresh">Refresh</string>
	<string name="confirm">Confirm</string>
	<string name="error">Error</string>
	<string name="success">Success</string>
	<string name="abort">Aborted</string>
	<string name="zip">Zip</string>
	<string name="cancelling">Cancelling...</string>
	<string name="run_in_background">Run in Background</string>
	<string name="share_via">Share via</string>
	<string name="open_using">Open using</string>
	<string name="copied_toast">%1$s copied</string>
	<string name="cut_toast">%1$s cut</string>
	<string name="zip_success">Selected files(s) have been zipped to %1$s</string>
	<string name="zip_dir_empty">Zip failed. Specified folder is empty.</string>
	<string name="zip_dest_invalid">Zip file destination was invalid. Please check the destination in Menu &gt; and try again</string>
	<string name="zip_failed">One or more selected file(s) could not be zipped. Please verify zip file name and try again</string>
	<string name="zip_in_progress">Files are being zipped. Please wait.</string>
	<string name="zip_aborted">Zip was aborted.</string>
	<string name="zip_dialog">Create Zip in %1$s</string>
	<string name="enter_zip_file_name">Enter zip file name</string>
	<string name="zip_abort_partial">Zip operation was aborted. However, one or more files were copied to %1$s</string>
	<string name="copy_aborted">Copy was aborted.</string>
	<string name="copy_abort_partial">Copy operation was aborted. However, one or more files were copied.</string>
	<string name="move_aborted">Move was aborted.</string>
	<string name="move_abort_partial">Move operation was aborted. However, one or more files were moved.</string>
	<string name="access_denied">Access Denied</string>
	<string name="cant_open_dir">%1$s is a protected directory. You will require root access on your device to open and browse this directory</string>
	<string name="confirm_delete">Are you sure you want to delete %1$s ?</string>
	<string name="confirm_paste_text">Are you sure you want to paste %1$s ?</string>
	<string name="delete_failed">%1$s could not be deleted</string>
	<string name="rename_failed">%1$s could not be renamed</string>
	<string name="enter_new_name">Enter new name</string>
	<string name="rename_dialog_title">Rename %1$s</string>
	<string name="properties_for">Properties: %1$s</string>
	<string name="deleting_path">Deleting path %1$s ...</string>
	<string name="copying_path">Copying %1$s . Please wait ...</string>
	<string name="moving_path">Moving %1$s .Please wait...</string>
	<string name="create_folder">Create Folder</string>
	<string name="enter_folder_name">Enter folder name</string>
	<string name="querying_filesys">Querying File System. Please wait.</string>
	<string name="copy_complete">Copy complete.</string>
	<string name="move_complete">Resource successfully moved to new location</string>
	<string name="generic_operation_failed">Could not complete operation</string>
	<string name="share_msg">I have been using FileExplorer for Android and thought you might like it too. \nHere is the download link - %2$s </string>
	<string name="pref_cat_general">View Options</string>
	<string name="pref_home_folder">Start up folder</string>
	<string name="pref_home_folder_desc">File explorer will open this folder at when started</string>
	<string name="pref_showhidden">Show hidden paths</string>
	<string name="pref_showhidden_on">Hidden files and folders are shown</string>
	<string name="pref_showhidden_off">Hidden files and folders are omitted</string>
	<string name="pref_show_dir_sizes">Show folder sizes</string>
	<string name="pref_show_dir_sizes_on_desc">Folder sizes are rolled up</string>
	<string name="pref_show_dir_sizes_off_desc">Folder sizes are not shown</string>
	<string name="pref_show_sysfiles">Show protected folders</string>
	<string name="pref_show_sysfiles_on">Protected system folders are shown</string>
	<string name="pref_show_sysfiles_off">Protected system folders are hidden</string>
	<string name="pref_cat_sorting">Sorting</string>
	<string name="pref_dirsfirst">Show directories on top</string>
	<string name="pref_dirsfirst_on_desc">Will show directories on top</string>
	<string name="pref_dirsfirst_off_desc">Will not give preference to directories in sorting</string>
	<string name="pref_sort_field">Sort Field</string>
	<string name="pref_sort_field_desc">Attribute on which path should be sorted</string>
	<string name="pref_sort_dir">Sort Direction</string>
	<string name="pref_cat_geeky">Geeky Stuff</string>
	<string name="pref_zipenable">Enable Zip</string>
	<string name="pref_zipenable_on">Files and folders have an option to compress into another file</string>
	<string name="pref_zipenable_off">Files and folders can not be zipped</string>
	<string name="pref_zip_location">Zip Location</string>
	<string name="pref_zip_location_desc">Zipped files and folders will be kept at this location</string>
	<string name="pref_show_sdcard_options">SD Card Options</string>
	<string name="pref_show_sdcard_options_on">Unmount, format options are shown for SD card</string>
	<string name="pref_show_sdcard_options_off">SD Card Options are hidden</string>
	<string name="pref_cat_misc">About</string>
	<string name="pref_share">Tell your friends</string>
	<string name="pref_share_desc">Share this app with your friends</string>
	<string name="pref_terms">Terms &amp; Conditions</string>
	<string name="pref_website">Developer Website</string>
	<string name="pref_website_desc">Visit my website</string>
	<string name="pref_feedback">Send feedback</string>
	<string name="pref_feedback_desc">Drop me an email. Feedback is most welcome!</string>
	<string name="filepath_is">Path: %1$s </string>
	<string name="mtime_is">Last Modified on %1$s</string>
	<string name="size_is">Size: %1$s</string>
	<string name="plushtechemail">PlushTech Email</string>
	<string name="photo">Photo</string>
	<string name="document">Document</string>
	<string name="webpage">Webpage</string>
	<string name="printoption">Print Option</string>
	<string name="printer">Printer</string>
	<string name="system_path">System</string>
	<string-array name="sort_fields_entries">
        <item>Name</item>
        <item>Size</item>
        <item>Last Modified</item>
    </string-array>
    <string-array name="sort_fields_values">
        <item>name</item>
        <item>size</item>
        <item>mtime</item>
    </string-array>
    	<string-array name="sort_dir_entries">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="sort_dir_values">
        <item>asc</item>
        <item>desc</item>
    </string-array>
	<string name="no_media_warning">Storage media not present</string>
	<string name="search_backwards">Search backwards</string>
	<string name="search_forwards">Search forwards</string>
	<string name="search_document">Search document</string>
	<string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
	<string name="outline_title">Table of Contents</string>
	<string name="enter_password">Enter password</string>
	<string name="text_not_found">Text not found</string>
	<string name="searching_">Searching&#8230;</string>
	<string name="toggle_links">Highlight and enable links</string>
	<string name="no_further_occurrences_found">No further occurrences found</string>
	<string name="select">Select</string>
	<string name="search">Search</string>
	<string name="copy">Copy</string>
	<string name="strike_out">Strike-out</string>
	<string name="delete">Delete</string>
	<string name="highlight">Highlight</string>
	<string name="underline">Underline</string>
	<string name="edit_annotations">Edit annotations</string>
	<string name="ink">Ink</string>
	<string name="save">Save</string>
	<string name="print">Print</string>
	<string name="dismiss">Dismiss</string>
	<string name="parent_directory">[Up one level]</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="entering_reflow_mode">Entering reflow mode</string>
	<string name="leaving_reflow_mode">Leaving reflow mode</string>
	<string name="print_failed">Print failed</string>
	<string name="select_text">Select text</string>
	<string name="copied_to_clipboard">Copied to clipboard</string>
	<string name="no_text_selected">No text selected</string>
	<string name="draw_annotation">Draw annotation</string>
	<string name="nothing_to_save">Nothing to save</string>
	<string name="document_has_changes_save_them_">Document has changes. Save them?</string>
</resources>