<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="@android:color/white">

        <Button
            android:id="@+id/back_selectprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back" 
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SelectPinter" 
                android:textSize="30dp"/>
        </LinearLayout>
    </LinearLayout>
    
    
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <View
        style="@style/view" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/scanfor_printer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ScanForPrinter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/manual"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Manual" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/FountPrinter" 
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/number_printer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="2" 
            android:textSize="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/settings_printer_list_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/discard_priter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Discard" />
    </LinearLayout>

</LinearLayout>