<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/titlehead"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/Printpreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:text="@string/PrintPreView"
                android:textSize="30dp" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        style="@style/view"
        android:layout_below="@+id/titlehead" />

    <LinearLayout
        android:id="@+id/tile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlehead"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Preview"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="Total page: "
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tile" >

        <Gallery
            android:id="@+id/galley_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:layout_below="@+id/scroll">

            <LinearLayout
                android:id="@+id/number_page"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_prinall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Print All  "
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="27dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="Page Print"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" >

                        <EditText
                            android:id="@+id/edit_number_print"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="21dp"
                            android:layout_weight="1" 
                             android:numeric="integer"
                             android:inputType="numberDecimal"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/number_copy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/number_page"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_curren_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Current Page"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Number Copy"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_number_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1" 
                        android:numeric="integer"
                        android:inputType="numberDecimal"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/scale"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/number_copy"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Scale Picture"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/print_fittopage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="Fit To Page"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_scale"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scale" >

                <View style="@style/line" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/margin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_scale"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Page Margins"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/print_page_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="1/4"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_margin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/margin" >

                <View style="@style/line" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/orienstation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_margin"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Page Orientation"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/print_orienstation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="Portrait"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_orienstation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/orienstation" >

                <View style="@style/line" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_orienstation"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Page size"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/print_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="Legal"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/size" >

                <View style="@style/line" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/printer_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/size"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Select Printer"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/print_name_printer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="Canon lP2500"
                    android:textSize="15dp" />
            </LinearLayout>
        </RelativeLayout>

    <LinearLayout
        android:id="@+id/print_preview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/button_print_preview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Print" 
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

</RelativeLayout>